// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Unit Test> Hand should be able to render the component 1`] = `
<div>
  <h3>
    Your hand
  </h3>
  <div
    class="hand"
  >
    <div>
      <div
        class="flex-center-center card"
        data-testid="card-0-1"
        style="background-position: -79px -0px;"
      />
    </div>
    <div>
      <div
        class="flex-center-center card"
        data-testid="card-0-2"
        style="background-position: -158px -0px;"
      />
    </div>
    <div>
      <div
        class="flex-center-center card"
        data-testid="card-0-3"
        style="background-position: -237px -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<Unit Test> Hand should be able to show the selection button 1`] = `
<div>
  <h3>
    Your hand
  </h3>
  <div
    class="hand"
  >
    <div>
      <div
        class="flex-center-center card"
        data-testid="card-0-1"
        style="background-position: -79px -0px;"
      />
      <button
        data-testid="1-0-select-button"
      >
        This one
      </button>
    </div>
    <div>
      <div
        class="flex-center-center card"
        data-testid="card-0-2"
        style="background-position: -158px -0px;"
      />
      <button
        data-testid="2-0-select-button"
      >
        This one
      </button>
    </div>
    <div>
      <div
        class="flex-center-center card"
        data-testid="card-0-3"
        style="background-position: -237px -0px;"
      />
      <button
        data-testid="3-0-select-button"
      >
        This one
      </button>
    </div>
  </div>
</div>
`;

exports[`<Unit Test> Hand should hide the card if it is selected 1`] = `
<div>
  <h3>
    Your hand
  </h3>
  <div
    class="hand"
  >
    <div>
      <div
        class="flex-center-center card"
        data-testid="card-0-1"
        style="background-position: -79px -0px;"
      />
    </div>
    <div>
      <div
        class="flex-center-center card"
        data-testid="card-0-2"
        style="background-position: -158px -0px;"
      />
      <button
        data-testid="2-0-select-button"
      >
        This one
      </button>
    </div>
    <div>
      <div
        class="flex-center-center card"
        data-testid="card-0-3"
        style="background-position: -237px -0px;"
      />
      <button
        data-testid="3-0-select-button"
      >
        This one
      </button>
    </div>
  </div>
</div>
`;
